# vecu-failover

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  STM32F412Vx_FLASH.ld  run_vhil.sh
Core/Inc/: FreeRTOSConfig.h  Rte_mock.h  can_driver.h  hil.h  hil_types.h  protocol.h  rtwtypes.h
Core/Src/: Rte_mock.c  can_driver_socketcan.c  can_driver_stm32.c  hil.c  main_node_a.c  main_node_b.c  main_node_c.c  protocol.c
common/: protocol.c  protocol.h
docs/daily-logs/: 2026-06-28.md
node_a_pedal_ecu/: CMakeLists.txt  main.c  pedal_task.c
node_b_engine_ecu/: CMakeLists.txt  engine_task.c  main.c
node_c_cluster_ecu/: CMakeLists.txt  cluster_task.c  main.c
sil/: CMakeLists.txt  test_failover_latency.sh
sil/Inc/: FreeRTOSConfig.h
